<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:id="@+id/eventDetailSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_event_detail"
            android:textSize="20dp"
            />

    <TableLayout android:id="@+id/eventDetailTable" android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
        <TableRow android:id="@+id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/event_detail_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="fill_parent"/>
            <EditText
                    android:id="@+id/eventDetailLocation"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:editable="false"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/event_detail_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="fill_parent"/>
            <EditText
                    android:id="@+id/eventDetailDescription"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:editable="false"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/event_detail_time"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="fill_parent"/>
            <EditText
                    android:id="@+id/eventDetailTime"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:editable="false"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/event_detail_initiator"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="fill_parent"/>
            <EditText
                    android:id="@+id/eventDetailInitiator"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:editable="false"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            />

    <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/CheckinButton"
            android:layout_gravity="center"
            android:text="@string/checkin"
            />

</LinearLayout>
